--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS HTML Mini</title>
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
-        <div class="box1"></div>
-        <div class="box2"></div>
+        <div class="box1 header-box"></div>
+        <div class="box2 header-box"></div>
     </header>
+    <main>
+        <section>
+            <div class="section-box1 white-box"></div>
+            <div class="section-box2 white-box"></div>
+            <div class="section-box3">
+                <div class="left-box white-box pill"></div>
+                <div class="right-box white-box pill"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
+
+
